Needs more dialing in, but fixed the styling problem making scatterplot bleed off the screen and geomap look itsy bitsy

--- a/packages/client-mav/src/app/make-a-vis/visualization-view/main/main.component.sass
+++ b/packages/client-mav/src/app/make-a-vis/visualization-view/main/main.component.sass
@@ -3,6 +3,10 @@
   height: 100%
   width: 100%
 
+.tab-content
+  padding: 1vh 1vw 1vh 1vh
+  height: calc(65vh - 13vh)
+
 .text
   color: #000000
 
